--- a/site/styles/main.css
+++ b/site/styles/main.css
@@ -1,12 +1,13 @@
 /**
  * Main Style Sheet
- * Site Name
+ * Bezalel Site
  *
  * Copyright (c) 2015. by Way2CU, http://way2cu.com
- * Authors:
+ * Authors:Tal Reznic
  */
-
+@import url(http://fonts.googleapis.com/earlyaccess/opensanshebrew.css);
 body {
+	font-family: 'Open Sans Hebrew', sans-serif;
 	background-color: white;
 	color: black;
 }
