--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -9,7 +9,39 @@
 		</head>
 
 		<body class="$language_rtl ? 'rtl' : 'ltr'" cms:eval="class">
-			<h1>It works!</h1>
+			<header>
+				<div class="article_wrapper">
+					<cms:module
+						name="articles"
+						action="show"
+						text_id="header_article"
+						template="parts/article.xml"
+						/>
+
+						<a
+							href="'tel:'.urlencode(Language::getText('number'))"
+							cms:eval="href"
+							class="phone"
+							>
+							<cms:text constant="number"/>
+						</a>
+				</div>
+
+				<div class="form_wrap">
+					<cms:module
+						name="articles"
+						action="show"
+						text_id="form_article"
+						template="parts/article_no_heading.xml"
+						/>
+					<cms:module
+						name="contact_form"
+						action="show"
+						text_id="contact_form"
+						/>
+				</div>
+
+			</header>
 		</body>
 	</html>
 </document>
