--- a/site/styles/content.css
+++ b/site/styles/content.css
@@ -37,6 +37,10 @@ a.phone:hover {
 	background-color: #77b300;
 }
 
+h2 {
+	font-size: 2.2em;
+}
+
 h3 {
 	font-size: 2em;
 }
@@ -44,3 +48,164 @@ h3 {
  p {
  	font-size: 1.5em;
  }
+
+ /*Features Section*/
+
+ div.features {
+ 	display: block;
+ 	padding: 20px calc((100vw - 1200px) / 2);
+ 	background-color: #221e1f;
+ }
+
+ article.features_article {
+ 	display: block;
+ 	text-align: center;
+ }
+
+ article.features_article h3 {
+ 	display: block;
+ 	font-size: 1.6em;
+ 	color: #3397da;
+ }
+
+article.features_article p:first-of-type {
+ 	display: block;
+ 	margin-left: auto;
+ 	margin-right: auto;
+ 	margin-bottom: 10px;
+ 	width: 40%;
+ 	color: #3397da;
+ }
+
+article.features_article p:nth-of-type(2) {
+ 	display: inline-block;
+ 	vertical-align: top;
+ 	padding-top: 200px;
+ 	color:white;
+ 	width: 350px;
+ 	position: relative;
+ }
+
+ article.features_article p:nth-of-type(2):before {
+ 	content: "";
+ 	position: absolute;
+ 	top: 0px;
+ 	left: 50%;
+ 	margin-left: -100px;
+ 	background-image: url(../images/icons.svg);
+ 	background-repeat: no-repeat;
+ 	background-position: -400px 0px;
+ 	background-size: 600px 200px;
+ 	width: 200px;
+ 	height: 200px;
+ }
+
+ article.features_article p:nth-of-type(3) {
+ 	display: inline-block;
+ 	vertical-align: top;
+  	padding-top: 200px;	
+  	color:white;	
+  	width: 350px;
+	position: relative;	
+ }
+
+article.features_article p:nth-of-type(3):before {
+ 	content: "";
+ 	position: absolute;
+ 	top: 0px;
+ 	left: 50%;
+ 	margin-left: -100px;
+ 	background-image: url(../images/icons.svg);
+ 	background-repeat: no-repeat;
+ 	background-position: -200px 0px;
+ 	background-size: 600px 200px;
+ 	width: 200px;
+ 	height: 200px;
+ }
+
+article.features_article p:nth-of-type(4) {
+ 	display: inline-block;
+ 	vertical-align: top;
+  	padding-top: 200px;	
+  	color:white;	
+  	width: 350px;
+	position: relative; 		
+ }
+
+ article.features_article p:nth-of-type(4):before {
+ 	content: "";
+ 	position: absolute;
+ 	top: 0px;
+ 	left: 50%;
+ 	margin-left: -100px;
+ 	background-image: url(../images/icons.svg);
+ 	background-repeat: no-repeat;
+ 	background-position: 0px 0px;
+ 	background-size: 600px 200px;
+ 	width: 200px;
+ 	height: 200px;
+ }
+
+ /*Map Section*/
+
+ div.map {
+	display: block;
+	text-align: center;
+	padding:0px calc((100vw - 1200px) / 2);
+	background-image: url(../images/google-streets-background-01.jpg);
+	background-repeat: no-repeat;
+	background-position: center top;
+	background-size: 1920px 800px;
+	min-height: 800px;
+ }
+
+ article.map_article {
+ 	display: block;
+ }
+
+  article.map_article h2 {
+  	display: block;
+  	padding-top: 20px;
+  	color:#3397da;
+}
+
+
+/*Footer Section*/
+ footer {
+	display: block;
+	padding:0px calc((100vw - 1200px) / 2);
+	background-color: #212121;
+	text-align: center;
+}
+
+footer span {
+	display: inline-block;
+	vertical-align: middle;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-left: 40px;
+	background-image: url(../images/way2cu-color.svg);
+	background-repeat: no-repeat;
+	background-position: left center;
+	background-size: 30px 34.5px;
+	font-size: 0.9em;
+	color: white;
+	text-align: left;
+	direction: ltr;
+	width: 270px;
+}
+footer span a {
+	padding-left: 5px;
+	text-decoration: underline;
+}
+
+
+footer span a {
+	padding-left: 5px;
+	color:#449bb5;
+	transition:all 0.3s;
+}
+
+footer span a:hover {
+	color:#5bc2d8;
+} 
