--- a/site/styles/content.css
+++ b/site/styles/content.css
@@ -157,6 +157,7 @@ article.features_article p:nth-of-type(4) {
 	background-position: center top;
 	background-size: 1920px 800px;
 	min-height: 800px;
+	position: relative;
  }
 
  article.map_article {
@@ -167,6 +168,18 @@ article.features_article p:nth-of-type(4) {
   	display: block;
   	padding-top: 20px;
   	color:#3397da;
+}
+
+div#map_canvas{
+	display: block;
+	position: absolute;
+	top:50%;
+	margin-top: -200px;
+	left: 50%;
+	margin-left: -400px;
+	width: 800px;
+	height: 400px;
+	border:1px solid black;
 }
 
 
