--- a/site/styles/content.css
+++ b/site/styles/content.css
@@ -179,7 +179,8 @@ div#map_canvas{
 	margin-left: -400px;
 	width: 800px;
 	height: 400px;
-	border:1px solid black;
+	border:5px solid white;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
 }
 
 
@@ -222,3 +223,28 @@ footer span a {
 footer span a:hover {
 	color:#5bc2d8;
 } 
+
+/*Tablet Version*/
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+div.article_wrapper {
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  margin-right: 0px;
+}
+
+article.features_article p:nth-of-type(2) {
+	width: 300px;
+}
+
+article.features_article p:nth-of-type(3) {
+	width: 300px;
+}
+
+article.features_article p:nth-of-type(4) {
+	width: 300px;
+}
+
+
+}
